Navigation page and Master details page

--- a/Daijoubu/Daijoubu/MainPage.xaml
+++ b/Daijoubu/Daijoubu/MainPage.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:Daijoubu"
              x:Class="Daijoubu.MainPage">
 
-  <Label Text="Welcome to Xamarin Forms!"
+  <Label Text="Landing Page!"
            VerticalOptions="Center"
            HorizontalOptions="Center" />
 
