--- a/Daijoubu/Daijoubu/MainPage.xaml
+++ b/Daijoubu/Daijoubu/MainPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Daijoubu"
-             x:Class="Daijoubu.MainPage">
+             x:Class="Daijoubu.MainPage"
+             Title="Daijoubu">
 
   <Label Text="Landing Page!"
            VerticalOptions="Center"
