edited something in the landing page

--- a/Daijoubu/Daijoubu/MainPage.xaml
+++ b/Daijoubu/Daijoubu/MainPage.xaml
@@ -21,8 +21,7 @@
                    VerticalOptions="Center"
                    TextColor="Red"
                    BackgroundColor="Green"
-                   FontSize="25"
-             />
+                   FontSize="25" />
 
 
     </RelativeLayout>
