--- a/Daijoubu/Daijoubu/AppPages/QuizPages/ReadingPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/ReadingPage.xaml
@@ -3,5 +3,47 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.QuizPages.ReadingPage"
              Title="Reading Module" >
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <StackLayout>
+
+    <Label Text=" " />
+    <Label Text=" " />
+    <Label Text=" " />
+    
+    <Label x:Name="label_question"
+             Text="*value*"
+             FontSize="30"
+             HorizontalOptions="Center" />
+    
+    <Label Text=" " />
+    <Label Text=" " />
+    <Label Text=" " />
+    <Label Text=" " />
+    
+    <Grid>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*" />
+        <RowDefinition Height="*" />
+      </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="*" />
+      </Grid.ColumnDefinitions>
+      <Button x:Name="btn_choice1"
+              Grid.Row="0" Grid.Column="0"
+              Text="*ans1*" />
+      <Button x:Name="btn_choice2"
+              Grid.Row="0" Grid.Column="1"
+              Text="*ans2*" />
+      <Button x:Name="btn_choice3"
+              Grid.Row="1" Grid.Column="0"
+              Text="*ans3*" />
+      <Button x:Name="btn_choice4"
+              Grid.Row="1" Grid.Column="1"
+              Text="*ans4*" />
+    </Grid>
+    
+  </StackLayout>
+
+
+
 </ContentPage>
