--- a/Daijoubu/Daijoubu/AppPages/QuizPages/TypingPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/TypingPage.xaml
@@ -3,5 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.QuizPages.TypingPage"
              Title="Typing Module" >
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <StackLayout>
+
+    <Label Text=" " />
+    <Label Text=" " />
+    <Label Text=" " />
+    
+    <Label x:Name="label_question" 
+           Text="*value*" 
+           FontSize="30"
+           HorizontalOptions="Center" />
+
+    <Label Text=" " />
+    <Label Text=" " />
+    <Label Text=" " />
+    <Label Text=" " />
+    
+    <Entry x:Name="textentry_answer"
+           Placeholder="Type your answer"/>
+
+    <Label Text=" " />
+    <Label Text=" " />
+    
+    <Button x:Name="btn_submit"
+            Text="Submit" />
+    
+  </StackLayout>
 </ContentPage>
