--- a/Daijoubu/Daijoubu/AppPages/QuizPages/MultipleChoicePage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/MultipleChoicePage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.QuizPages.MultipleChoicePage"
-             Title="Choice Module" >
+             Title="Choice Module" 
+             x:Name="MultipleChoicePage"
+             AutomationId="auto_MultipleChoicePage">
 
   <StackLayout>
 
@@ -30,15 +32,19 @@
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
       <Button x:Name="btn_choice1"
+              AutomationId="auto_btn_choice1"
               Grid.Row="0" Grid.Column="0"
               Text="*ans1*" />
       <Button x:Name="btn_choice2"
+              AutomationId="auto_btn_choice2"
               Grid.Row="0" Grid.Column="1"
               Text="*ans2*" />
       <Button x:Name="btn_choice3"
+              AutomationId="auto_btn_choice3"
               Grid.Row="1" Grid.Column="0"
               Text="*ans3*" />
       <Button x:Name="btn_choice4"
+              AutomationId="auto_btn_choice4"
               Grid.Row="1" Grid.Column="1"
               Text="*ans4*" />
     </Grid>
