--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -1,20 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Daijoubu.SideMenuItems">
+             x:Class="Daijoubu.SideMenuItems"
+             BackgroundColor="#CDFFFF">
 
   <StackLayout Orientation="Vertical">
     <!-- <Button Text="Home" 
                  x:Name="SideMenuButton_Home"/> -->
     <Button Text="Profile"
-            x:Name="SideMenuButton_Profile"/>
+            x:Name="SideMenuButton_Profile"
+            TextColor="Red"
+            BackgroundColor="#400D12"/>
     <Button Text="Quiz"
             x:Name="SideMenuButton_Quiz"
-            AutomationId="auto_SideMenuButton_Quiz"/>
+            TextColor="Red"
+            AutomationId="auto_SideMenuButton_Quiz"
+            BackgroundColor="#400D12"/>
     <Button Text="Settings"
-            x:Name="SideMenuButton_Settings"/>
+            TextColor="Red"
+            x:Name="SideMenuButton_Settings"
+            BackgroundColor="#400D12"/>
     <Button Text="About"
-            x:Name="SideMenuButton_About"/>
+            TextColor="Red"
+            x:Name="SideMenuButton_About"
+            BackgroundColor="#400D12"/>
 
   </StackLayout>
 
