--- a/Daijoubu/Daijoubu/SideMenuPage.xaml
+++ b/Daijoubu/Daijoubu/SideMenuPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.SideMenuPage"
              xmlns:local="clr-namespace:Daijoubu;assembly=Daijoubu"
-             Title="Daijoubu">
+             Title="Daijoubu"
+             BackgroundColor="#4FD5D6">
 
   <MasterDetailPage.Master>
     <local:MainPage x:Name="SideMenuInstance" />
