optimized srs and kana separation

--- a/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
@@ -35,7 +35,14 @@
                   <Label Text="LastView: "/>
                   <Label Text="{Binding LastView}"/>
                 </StackLayout>
-
+                <StackLayout Orientation="Horizontal">
+                  <Label Text="Next Queuing: "/>
+                  <Label Text="{Binding NextQueue}"/>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal">
+                  <Label Text="Percent: "/>
+                  <Label Text="{Binding Percent}"/>
+                </StackLayout>
               </StackLayout>
             </ViewCell.View>
           </ViewCell>
