--- a/Daijoubu/Daijoubu/AppPages/AboutPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/AboutPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.AboutPage"
              Title="About"
-             BackgroundColor="#CDFFFF">
+             BackgroundColor="#DFDFDF"
+             Padding="50">
   <StackLayout
     Padding="10">
 
