--- a/Daijoubu/Daijoubu/AppPages/ProfilePage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.ProfilePage"
              Title="Profile"
-             BackgroundColor="#CDFFFF">
+             BackgroundColor="#DFDFDF"
+             Padding="50">
 
   <StackLayout>
 
