--- a/Daijoubu/Daijoubu/AppPages/QuizPages/TypingPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/QuizPages/TypingPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.AppPages.QuizPages.TypingPage"
-             Title="Typing Module" >
+             Title="Typing Module"
+             Padding="50">
   <StackLayout>
 
     <Label Text=" " />
