--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -2,33 +2,34 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.SideMenuItems"
-             BackgroundColor="#CDFFFF">
+             BackgroundColor="#273442"
+>
 
   <StackLayout Orientation="Vertical">
     <!-- <Button Text="Home" 
                  x:Name="SideMenuButton_Home"/> -->
     <Button Text="Profile"
             x:Name="SideMenuButton_Profile"
-            TextColor="Red"
-            BackgroundColor="#400D12"/>
+            TextColor="White"
+            BackgroundColor="#273442"/>
     <Button Text="Quiz N5"
             x:Name="SideMenuButton_Quiz"
-            TextColor="Red"
+            TextColor="White"
             AutomationId="auto_SideMenuButton_Quiz"
-            BackgroundColor="#400D12"/>
+            BackgroundColor="#273442"/>
     <Button Text="Quiz N4"
             x:Name="SideMenuButton_QuizN4"
-            TextColor="Red"
+            TextColor="White"
             AutomationId="auto_SideMenuButton_Quiz"
-            BackgroundColor="#400D12"/>
+            BackgroundColor="#273442"/>
     <Button Text="Settings"
-            TextColor="Red"
+            TextColor="White"
             x:Name="SideMenuButton_Settings"
-            BackgroundColor="#400D12"/>
+            BackgroundColor="#273442"/>
     <Button Text="About"
-            TextColor="Red"
+            TextColor="White"
             x:Name="SideMenuButton_About"
-            BackgroundColor="#400D12"/>
+            BackgroundColor="#273442"/>
 
   </StackLayout>
 
