--- a/Daijoubu/Daijoubu/SideMenuPage.xaml
+++ b/Daijoubu/Daijoubu/SideMenuPage.xaml
@@ -4,14 +4,16 @@
              x:Class="Daijoubu.SideMenuPage"
              xmlns:local="clr-namespace:Daijoubu;assembly=Daijoubu"
              Title="Daijoubu"
-             BackgroundColor="#4FD5D6">
+             BackgroundColor="#273442"
+             
+             >
 
   <MasterDetailPage.Master>
     <local:MainPage x:Name="SideMenuInstance" />
   </MasterDetailPage.Master>
 
   <MasterDetailPage.Detail>
-    <local:MainPage />
+      <local:MainPage />
   </MasterDetailPage.Detail>
   
 </MasterDetailPage>
