bugfix in delete user data

--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.SideMenuItems"
              BackgroundColor="#273442"
->
+             Padding="0,50,0,0">
 
   <StackLayout Orientation="Vertical">
     <!-- <Button Text="Home" 
