--- a/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
+++ b/Daijoubu/Daijoubu/AppPages/ProfilePages/AchivementPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Daijoubu.AppPages.ProfilePages.AchivementPage">
+             x:Class="Daijoubu.AppPages.ProfilePages.AchivementPage"
+             Padding="50">
 
 
   <StackLayout>
