--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -2,8 +2,7 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.SideMenuItems"
-             BackgroundColor="#273442"
-             Padding="0,50,0,0">
+             BackgroundColor="#273442">
 
   <StackLayout Orientation="Vertical">
     <!-- <Button Text="Home" 
