--- a/Daijoubu/Daijoubu/MainPage.xaml
+++ b/Daijoubu/Daijoubu/MainPage.xaml
@@ -4,34 +4,17 @@
              xmlns:local="clr-namespace:Daijoubu"
              x:Class="Daijoubu.MainPage"
              Title="Daijoubu"
-             BackgroundColor="#DFDFDF"
-             >
+             BackgroundColor="#000000">
   
-  <StackLayout Orientation="Vertical" 
-    Padding="0,-50,0,0">
-    <RelativeLayout>
+  <StackLayout Orientation="Vertical" >
       <!-- header image with text -->
 
       <Image x:Name="image_homepage_header"
              Source="homepage_header"
-             Aspect="AspectFill"
-             
-             />
+             Aspect="AspectFill"/>
 
       <Label x:Name="label_homepage_header"
-             Text="Welcome to だいじょうぶ"
-             
-             HorizontalOptions="Center"
-             TextColor="Red"
-             BackgroundColor="Green"
-             FontSize="25"
-             
-             RelativeLayout.YConstraint =
-             "{ConstraintExpression Type=RelativeToParent,
-                             Property=Height,
-                             Factor=0,
-                             Constant=-50}" />
-    </RelativeLayout>
+             Text="Welcome to だいじょうぶ"/>
   
     <ListView x:Name="listview_homepage" />
   </StackLayout>
