--- a/Daijoubu/Daijoubu/SideMenuItems.xaml
+++ b/Daijoubu/Daijoubu/SideMenuItems.xaml
@@ -2,7 +2,8 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Daijoubu.SideMenuItems"
-             BackgroundColor="#273442">
+             BackgroundColor="#273442"
+             Padding="50">
 
   <StackLayout Orientation="Vertical">
     <!-- <Button Text="Home" 
